Try making tiles update on click

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
 
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>KlSS Level Editor</title>
+    <link rel="stylesheet" type="text/css" href="stylesheets/styles.css">
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script defer src="app.js"></script>
 </head>
@@ -9,11 +13,10 @@
 <body>
     <div id="app">
         {{ resetLevel() }}
-
-        <div v-for="(row, i) in grid">
+        <H1>KlSS Level Editor</H1>
+        <div class="grid" v-for="(row, i) in grid">
             <span v-for="(cell, j) in row">
-                <INPUT v-if="cell===0" v-on:click="paint(i, j)" type="image" src="images/floor.PNG" value="">
-                <INPUT v-if="cell===1" v-on:click="paint(i, j)" type="image" src="images/wall.PNG" value="">
+                <img v-on:click="paint(i, j)" type="image" :src="getTileUrl(cell)" value="">
             </span>
             </BR>
         </div>
